--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitest/browser-playwright": "^4.0.8",
     "@vitest/coverage-v8": "^4.0.8",
     "cross-env": "^10.1.0",
+    "lucide-vue-next": "^0.553.0",
     "playwright": "^1.56.1",
     "storybook": "^10.0.6",
     "vite": "^7.1.11",
