--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .ts,.js,.vue",
     "storybook": "cross-env STORYBOOK=true storybook dev -p 6006",
     "build-storybook": "cross-env STORYBOOK=true storybook build"
   },
   "dependencies": {
+    "pinia": "^3.0.4",
     "vue": "^3.5.22",
     "vue-i18n": "^9.14.5",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
@@ -25,15 +29,22 @@
     "@storybook/addon-onboarding": "^10.0.6",
     "@storybook/addon-vitest": "^10.0.6",
     "@storybook/vue3-vite": "^10.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/browser-playwright": "^4.0.8",
     "@vitest/coverage-v8": "^4.0.8",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "cross-env": "^10.1.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.5.1",
     "lucide-vue-next": "^0.553.0",
     "playwright": "^1.56.1",
     "storybook": "^10.0.6",
+    "typescript": "^5.9.3",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "vue-tsc": "^3.1.3"
   }
 }
